FELIX-6759 - Remove the java.net.URL singleton takeover from URLHandlers
Now that plurl installs the JVM factories, URLHandlers is never instantiated:
its private constructor was the only caller of the reflective field clearing,
and nothing constructs it any more. Everything reachable only from there was
dead, including the whole cross-classloader rendezvous it existed to support
-- registerFrameworkListsForContextSearch published the framework list to a
URLHandlers in another classloader, which plurl now does properly. The class
keeps only the framework registry that URLHandlersBundleStreamHandler needs to
find the owner of a caller when a handler is not bound to one.

Removed: the constructor and its handler pre-loading, the two context-search
registration methods, the URLStreamHandlerFactory and ContentHandlerFactory
implementations (the class is no longer either), the built-in handler lookup
and the handler caches. SecureAction loses swapStaticFieldIfNotClass and
flush, which had no callers left.

This removes every reflective write to a java.net static field. One
sun.misc.Unsafe use remains in SecureAction.getAccessor, which is a different
concern: it is the setAccessible strategy for deep reflection, still needed by
addURLToURLClassLoader when installing framework extension bundles.

No behaviour change intended in what remains: registerFrameworkInstance and
unregisterFrameworkInstance still perform exactly one list update and one
counter step per call, as the lock dance around the removed registry did.

Suite is at the pre-existing baseline.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>